# Splatie

./: .gitmodules  Cargo.toml  build.rs
src/: ayy.rs  cheeseburger.rs  emergency_report.rs  error_codes.rs  fest_fax.rs  main.rs  miiverse_mod_application.rs  too_fat.rs
