[package]
name = "professor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
overflow-checks = false
debug = "none"
debug-assertions = false
strip = true
panic = "abort"




[dependencies]
dotenv = "0.15.0"
regex = "1.11.1"
once_cell = "1.20.3"


[dependencies.tokio]
version = "1.43.0"
features = [
    "rt",
    "macros",
]


[dependencies.serenity]
version = "0.12.4"
features = [
    "interactions_endpoint",
    "utils",
    "collector"
]

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
